HEAD
	+ Added beforeFwRestart method to firewall helper
3.2.3
	+ Fixed crash when editing view in Summarized Report
	+ Added EBox::Iptables::executeModuleRules to be able to execute
	  rules from a given module calling this new method
3.2.2
	+ Removed code made dead by new managament of DHCP nameservers
3.2.1
	+ Added missing EBox::Exceptions uses
3.2
	+ Set version to 3.2
3.1.7
	+ Added missing EBox::Gettext uses
3.1.6
	+ Use common prefix (zentyal-firewall) for logging redirections,
	  snat, drop and log rules
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised report has breadcrumbs now
3.1.5
	+ Use (i|f|o)accept chains in user's defined firewall rules to be
	  able to analyse the traffic
3.1.4
	+ New icons and style for Packet Filter section
	+ Moved warnings inside of models instead of Packet Filter frontpage
	+ Fix regression (INVALID packets on FORWARD were accepted)
	+ Delete iintservs and fobjects unused chains
3.1.3
	+ Hide from External to Internal section by default to avoid confusion
	  with Port Forwarding unless show_ext_to_int_rules confkey is enabled
3.1.2
	+ Added menu icon
	+ Set iaccept, faccept and oaccept chains instead of ACCEPT target
	  to be able to analyse traffic using IPS
	+ Add restartOnTemporaryStop attribute to firewall helper to
	  indicate to core if firewall must be restart on temporary stop
	  events
3.1.1
	+ Set file location for redirect rule logging
	+ Use zentyal-firewall prefix in redirects log
3.1
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.3
	+ Changed order for the ! character when adding an inverse rule
3.0.2
	+ Added preInput(), preOutput() and preForward() to FirewallHelper
3.0.1
	+ Adapted to changes in EBox::LogHelper::_convertTimestamp
3.0
	+ Set RS VPN rule only if the VPN connection is done
	+ Check connectivity against new API end point for Remote instead
	  of WS server
2.3.11
	+ Fixed names of some model classes
2.3.10